--- a/api/user-info/models/user-info.settings.json
+++ b/api/user-info/models/user-info.settings.json
@@ -47,6 +47,11 @@
     },
     "userId": {
       "type": "string"
+    },
+    "budget": {
+      "type": "component",
+      "repeatable": true,
+      "component": "budget-item.budget-item"
     }
   }
 }
